--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -6,7 +6,8 @@
   },
   "Menu": {
     "1": "À propos de moi",
-    "2": "Compétences"
+    "2": "Compétences personnelles",
+    "3": "Compétences de programmation"
   },
   "About": {
     "1": "À propos de moi",
@@ -20,11 +21,7 @@
     "2": "Appris durant mon année d' application Web à l' EPFL sur 5 projets , j'ai appris a travailler en equipe, utiliser les ressources nécessaires, rechercher correctement ainsi comment résoudre des problèmes liés au développement.",
     "3": "Mes deux années d'expériences en tant que négociateur immobilier m'ont appris a communiquez avec les équipes pour la prospection, travailler avec différents corps de métier, aider les autres négociateurs, mis en places des outils pour les équipes.",
     "4": "Durant mes 3 années de bachelor en Game Design j'ai travaillé obligatoirement en groupe de 4, avec un lead qui changeais pour chaque projets.",
-    "5": "Parce que le smartphone est devenu notre premier écran, un site Web optimisé pour les mobiles est l'une des meilleures pratiques en marketing numérique. C'est la première chose que j'ai apprise pendant mes études.",
-    "6": "Compétences personnelles"
-  },
-  "Skills": {
-    "1": "Compétences de programmation"
+    "5": "Parce que le smartphone est devenu notre premier écran, un site Web optimisé pour les mobiles est l'une des meilleures pratiques en marketing numérique. C'est la première chose que j'ai apprise pendant mes études."
   },
   "Contact": {
     "1": "Contactez moi",
