Update images photoshop
Add confirmation email send

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -27,6 +27,7 @@
     "1": "Contact",
     "2": "Name",
     "3": "Your message",
-    "4": "Send"
+    "4": "Send",
+    "5": "Your message has been succesfully sent. I will contact you soon."
   }
 }
